# cose-rust

./: Cargo.toml  build.rs
src/: cose.rs  decoder.rs  test_cose.rs  util.rs
