[package]
name = "cose"
version = "0.1.4"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "David Keeler <dkeeler@mozilla.com>"]
description = "Library to use COSE (https://tools.ietf.org/html/rfc8152) in Rust"
repository = "https://github.com/franziskuskiefer/cose-rust"
keywords = ["cose", "jose"]
license = "MPL-2.0"
build = "build.rs"

[dependencies]
moz_cbor = { git = "https://github.com/j-devel/cbor-rust", rev = "64184b7", default-features = false, features = ["core2"] }

[dev-dependencies]
scopeguard = "0.3"

[build-dependencies]
#minerva_refract = { path = "../../AnimaGUS-minerva/refract" }
minerva_refract = { git = "https://github.com/AnimaGUS-minerva/refract.git" }

[lib]
name = "cose"
path = "src/cose.rs"

[features]
default = ["std"]
std = []
